--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,25 @@
 @font-face {
-	font-family: 'Inter';
+	font-family: Inter;
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/inter/v3/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2)
+	src: url('https://fonts.gstatic.com/s/inter/v3/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2')
 		format('woff2');
 }
 @font-face {
-	font-family: 'Inter';
+	font-family: Inter;
 	font-style: normal;
 	font-weight: 500;
 	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/inter/v3/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2)
+	src: url('https://fonts.gstatic.com/s/inter/v3/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2')
 		format('woff2');
 }
 @font-face {
-	font-family: 'Inter';
+	font-family: Inter;
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/inter/v3/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2)
+	src: url('https://fonts.gstatic.com/s/inter/v3/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2')
 		format('woff2');
 }
 
