--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
+/* biome-ignore lint/nursery/noUnknownAtRule: Tailwind CSS */
 @theme {
 	--font-sans: Inter, sans-serif;
 }
